[package]
name = "pipspeak"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
disambiseq = "0.1.10"
flate2 = { version = "1.0.26", features = ["zlib-ng"] }
fxread = "0.2.5"
hashbrown = "0.14.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
yaml-rust = "0.4.5"

[profile.release]
debug = true
