[package]
name = "pipspeak"
version = "0.1.7"
edition = "2021"
description = "A tool for converting PIPSeq files to 10X Genomics compatible FASTQ files."
license = "MIT"
repository = "https://github.com/noamteyssier/pipspeak"
keywords = ["bioinformatics", "genomics", "10x", "pipseq", "cli"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
disambiseq = "0.1.10"
fxread = "0.2.5"
gzp = { version = "0.11.3", features=["deflate_rust"], default-features = false }
hashbrown = "0.14.0"
indicatif = "0.17.5"
num_cpus = "1.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
